# buf-python-betterproto-sandbox

./: README.md
.github/workflows/: buf-ci.yaml
pet_service/: Makefile.toml  pyproject.toml
pet_service/src/: client.py  server.py
pet_service/src/services/: pet.py
proto/: buf.gen.yaml  buf.yaml
